All corrections made for thesis

--- a/Appendix/Appendix.tex
+++ b/Appendix/Appendix.tex
@@ -226,7 +226,7 @@ Weak scaling is determined through Gustafson's law, which shows that as a proble
 
 \noindent
 As $\lim_{N\rightarrow\infty} S_w = \infty$, there is no limit to the amount of scaling for an increasing problem size \parencite{gustafsonReevaluatingAmdahlLaw1988}.
-As such we find that more powerful computers with many thousands of cores still benefit from parallelisation if the problem scales accordingly \parencite[Ch.~2]{pachecoIntroductionParallelProgramming2022}.
+As such we find that more powerful computers with many thousands of cores still benefit from parallelisation if the problem scales accordingly.
 
 % Issues with parallelism at high amounts
 Beyond these theoretical laws, there are practical limitations to parallel processing.
