--- a/Common_Symbols/Common_Symbols.tex
+++ b/Common_Symbols/Common_Symbols.tex
@@ -36,12 +36,12 @@ List of common symbols, if symbol requires a derivation, the appropriate equatio
 
   % Greek symbols
 
-  $\beta$ & Electron ion ratio & Eq. \ref{eq:electronionratio} \\
+  $\beta$ & Electron ion ratio & Section \ref{sec:gas-dust-cooling} \\
   $\eta$ & Wind momentum ratio  & Eq. \ref{eq:etach2} \\
   
   $\Lambda(T)$ & Plasma Cooling function & Section \ref{sec:gas-dust-cooling} \\
 
-  $\xi$ & Grain sticking efficiency & Eq. \ref{eq:dadtch3} \\
+  $\xi$ & Grain sticking efficiency & Eq. \ref{eq:dustgrowthradiuschange} \\
 
   $\theta\rms{c}$ & WCR conic opening angle & Eq. \ref{eq:conic} \\
   
