--- a/Abbreviations/Abbreviations.tex
+++ b/Abbreviations/Abbreviations.tex
@@ -55,7 +55,7 @@ List of common abbreviations, a section is referenced when applicable. Entries a
 
   CFL  & Courant-Friedrichs-Lewy & Section \ref{sec:numsim} \\
   HLLC & Harten-Lax-van Leer-Contact & Section \ref{sec:numsim} \\
-  RK   & Runge-Kutta & \ref{sec:numerical-math} \\
+  RK   & Runge-Kutta & Section \ref{sec:numerical-math} \\
   TEF & Temporal Evolution Function & Section \ref{sec:othercalc} \\
 
 \end{longtable}
