--- a/References/library-biblatex.bib
+++ b/References/library-biblatex.bib
@@ -963,6 +963,23 @@
   annotation = {ADS Bibcode: 1975MSRSL...9..193C}
 }
 
+@article{crameriComparisonNumericalSurface2012,
+  title = {A Comparison of Numerical Surface Topography Calculations in Geodynamic Modelling: An Evaluation of the `Sticky Air' Method},
+  shorttitle = {A Comparison of Numerical Surface Topography Calculations in Geodynamic Modelling},
+  author = {Crameri, F. and Schmeling, H. and Golabek, G. J. and Duretz, T. and Orendt, R. and Buiter, S. J. H. and May, D. A. and Kaus, B. J. P. and Gerya, T. V. and Tackley, P. J.},
+  date = {2012-04-01},
+  journaltitle = {Geophysical Journal International},
+  volume = {189},
+  number = {1},
+  pages = {38--54},
+  issn = {0956-540X},
+  doi = {10.1111/j.1365-246X.2012.05388.x},
+  url = {https://doi.org/10.1111/j.1365-246X.2012.05388.x},
+  urldate = {2023-02-06},
+  abstract = {Calculating surface topography in geodynamic models is a common numerical problem. Besides other approaches, the so-called `sticky air' approach has gained interest as a free-surface proxy at the top boundary. The often used free slip condition is thereby vertically extended by introducing a low density, low viscosity fluid layer. This allows the air/crust interface to behave in a similar manner to a true free surface. We present here a theoretical analysis that provides the physical conditions under which the sticky air approach is a valid approximation of a true free surface. Two cases are evaluated that characterize the evolution of topography on different timescales: (1) isostatic relaxation of a cosine perturbation and (2) topography changes above a rising plume. We quantitatively compare topographies calculated by six different numerical codes (using finite difference and finite element techniques) using three different topography calculation methods: (i) direct calculation of topography from normal stress, (ii) body-fitting methods allowing for meshing the topography and (iii) Lagrangian tracking of the topography on an Eulerian grid. It is found that the sticky air approach works well as long as the term ({$\eta$}st/{$\eta$}ch)/(hst/L)3 is sufficiently small, where {$\eta$}st and hst are the viscosity and thickness of the sticky air layer, and {$\eta$}ch and L are the characteristic viscosity and length scale of the model, respectively. Spurious lateral fluctuations of topography, as observed in some marker-based sticky air approaches, may effectively be damped by an anisotropic distribution of markers with a higher number of markers per element in the vertical than in the horizontal direction.},
+  file = {/Users/atomsite/Zotero/storage/A3Z2E7T4/Crameri et al. - 2012 - A comparison of numerical surface topography calcu.pdf;/Users/atomsite/Zotero/storage/T2K8TXXP/575556.html}
+}
+
 @article{crowther_dust_2003,
   title = {Dust {{Formation}} around {{Wolf-Rayet Stars}}},
   author = {Crowther, Paul A.},
