--- a/Thesis.tex
+++ b/Thesis.tex
@@ -163,8 +163,8 @@
 
 \newcommand{\atom}[3]{\prescript{#2}{#3}{\text{#1}}}
 
-\newcommand{\turbo}[1]{\textcolor{red}{\emph{\textbf{\texttt{\MakeUppercase{<<!!!#1!!!>>}}}}}}
-\newcommand{\note}[1]{\textcolor{red}{\textbf{#1}}}
+% \newcommand{\turbo}[1]{\textcolor{red}{\emph{\textbf{\texttt{\MakeUppercase{<<!!!#1!!!>>}}}}}}
+\newcommand{\note}[1]{#1}
 
 
 \newcommand{\firstpapertitle}{An Exploration of Dust Growth Within WCd Systems Using An Advected Scalar Dust Model}
